# rust_windows_core_app

./: Cargo.toml  README.md  register.cmd
appx/: AppxManifest.xml
src/: main.rs
